# PascalParser

./: CMakeLists.txt  README.md
Pascal2cpp/: Pascal2cpp.cpp
ScriptParser/: CodeGenerator.cpp  CodeGenerator.h  CompilerFrontend.cpp  CompilerFrontend.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  MetaObj.cpp  MetaObj.h  OpcodeSequence.cpp  OpcodeSequence.h  Parser.cpp  Parser.frame  Parser.h  PascalLike.ATG  Scanner.cpp  Scanner.frame  Scanner.h  StringVisitor.cpp  StringVisitor.h  SymTable.cpp  SymTable.h  SymTableObjects.cpp  SymTableObjects.h  SymTableTypes.cpp  SymTableTypes.h  TypeInferencer.cpp  TypeInferencer.h  ast.cpp  ast.h  coc.bat
ScriptRuntime/: BytecodeVM.cpp  BytecodeVM.h  ScriptVM.cpp  ScriptVM.h  ScriptVM_ops.cpp  ScriptVariant.cpp  ScriptVariant.h  StadardLibrary.cpp  StadardLibrary.h
TreeVariant/: ByteOrderBuffer.h  ByteOrderStream.h  ByteOrderStream_macro.h  TreeVariant.cpp  TreeVariant.h
tests/: ScriptTest.cpp  ScriptTest.h  test.cpp  tests.qrc
tests/pascal/: breakContinue.pas  classesFieldsAndMembersTest.pas  classesScopesTest.pas  cycles.pas  forwardDeclaration.pas  minimum.pas  nbody.pas  pointers.pas  test1.pas  test1a.pas  test1b.pas  test2.pas  test2a.pas  testConvert.pas  testString.pas  with.pas
